# bitlib

./: Cargo.toml  README.md
src/: ecc.rs  main.rs
tests/: ecc_test.rs
